--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 35.0,
-"selection": false,
+"row": 43,
+"scroll_position": 26.0,
+"selection": true,
+"selection_from_column": 43,
+"selection_from_line": 43,
+"selection_to_column": 59,
+"selection_to_line": 43,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,20 +25,6 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 8.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/ControllerCharacter.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 50,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -52,76 +42,6 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Markdown"
-}
-
-[res://Scripts/Character/States/StateAirborne.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 27,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateJumping.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateLanding.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 27,
-"scroll_position": 2.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStateMachine.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 152,
-"scroll_position": 120.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStatesBase.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 94,
-"scroll_position": 69.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
 }
 
 [res://Scripts/Character/State.gd]
@@ -147,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 157,
-"scroll_position": 96.0,
+"scroll_position": 121.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -157,44 +77,58 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 70,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 235,
-"scroll_position": 210.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/MovementManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 6,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 194,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/CameraRig.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 162,
-"scroll_position": 129.0,
+"row": 81,
+"scroll_position": 46.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
 [res://Scripts/InputComponents/InputManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 49,
+"scroll_position": 28.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Controllers/AnimationManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 108,
+"scroll_position": 73.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/CharacterStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 162,
+"scroll_position": 145.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/CharacterStatesBase.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -208,16 +142,198 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Controllers/AnimationManager.gd]
+[res://Scripts/Controllers/ControllerCharacter.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 111.0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/MovementManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://THEORY/3C_AdpatationToFramework.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 32,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
+}
+
+[res://Scripts/Character/States/StateAirborne.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateIdle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateJumping.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateLanding.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateRunning.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateWalking.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/InputComponents/GamepadComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Camera/CameraController.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Camera/CameraInput.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 64,
+"scroll_position": 26.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Camera/CameraResponder.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 190,
+"scroll_position": 152.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Controllers/CameraRig_legacy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 38,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
