--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -8,12 +8,36 @@ list=[{
 "path": "res://Scripts/Controllers/AnimationManager.gd"
 }, {
 "base": &"Node3D",
+"class": &"CameraController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CameraController.gd"
+}, {
+"base": &"Node",
+"class": &"CameraInput",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CameraInput.gd"
+}, {
+"base": &"Node",
+"class": &"CameraResponder",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CameraResponder.gd"
+}, {
+"base": &"Node3D",
 "class": &"CameraRig",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Controllers/CameraRig.gd"
+"path": "res://Scripts/Controllers/CameraRig_legacy.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
