--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://bsprrm672tx2s", "uid://cbx0rhk665pls")
+PackedScene=PackedStringArray("uid://diueuwbtv4w82", "uid://bsprrm672tx2s", "uid://cbx0rhk665pls")
