--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -93,7 +93,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/InputComponents/InputManager.gd"
+"path": "res://Scripts/InputComponents/InputManager_backup.gd"
+}, {
+"base": &"Node",
+"class": &"InputPriorityManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/InputPriorityManager.gd"
 }, {
 "base": &"Node",
 "class": &"JumpSystem",
