--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,12 +32,52 @@ list=[{
 "path": "res://Scripts/CCC/Camera/CameraResponder.gd"
 }, {
 "base": &"Node",
+"class": &"CharacterActions",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterActions.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"CharacterController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterController.gd"
+}, {
+"base": &"Node",
 "class": &"CharacterDebugHelper",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/_Debug/CharacterDebugHelper.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterPhysics",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterPhysics.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterSignals",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterSignals.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Character/CharacterState.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
@@ -72,14 +112,6 @@ list=[{
 "path": "res://Scripts/CCC/Control/GamepadComponent.gd"
 }, {
 "base": &"Node",
-"class": &"GamepadInputComponent",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/InputComponents/GamepadComponent.gd"
-}, {
-"base": &"Node",
 "class": &"InputController",
 "icon": "",
 "is_abstract": false,
@@ -88,28 +120,12 @@ list=[{
 "path": "res://Scripts/CCC/Control/InputController.gd"
 }, {
 "base": &"Node",
-"class": &"InputManager",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/InputComponents/InputManager_backup.gd"
-}, {
-"base": &"Node",
 "class": &"InputPriorityManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CCC/Control/InputPriorityManager.gd"
-}, {
-"base": &"Node",
-"class": &"JumpSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
 "class": &"KeyboardInput",
