--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/States/StateIdle.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Character/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/CharacterState.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Character/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Character/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/CCC/Camera/CameraController.gd", "res://Scripts/CCC/Camera/CameraInput.gd", "res://Scripts/CCC/Camera/CameraResponder.gd", "res://Scripts/CCC/Character/CharacterActions.gd", "res://Scripts/CCC/Character/CharacterController.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/CCC/Character/CharacterPhysics.gd", "res://Scripts/CCC/Character/CharacterSignals.gd", "res://Scripts/Character/CharacterState.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/CCC/Control/ClickNavigationComponent.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/CCC/Control/GamepadComponent.gd", "res://Scripts/CCC/Control/InputController.gd", "res://Scripts/CCC/Control/InputPriorityManager.gd", "res://Scripts/CCC/Control/KeyboardInput.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/CCC/Control/RawInputProcessor.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/Character/States/StateIdle.gd"
+selected_script="res://Scripts/Character/CharacterState.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
