--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/CharacterState.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Controllers/AnimationManager.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Character/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Character/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn")
-current_scene="res://SCENE.tscn"
+open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn", "res://Assets/ps_character_gurl.tscn")
+current_scene="res://Assets/ps_character_gurl.tscn"
 center_split_offset=-700
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=5
 
 [EditorWindow]
 
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/CCC/Camera/CameraController.gd", "res://Scripts/CCC/Camera/CameraInput.gd", "res://Scripts/CCC/Camera/CameraResponder.gd", "res://Scripts/CCC/Character/CharacterActions.gd", "res://Scripts/CCC/Character/CharacterController.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/CCC/Character/CharacterPhysics.gd", "res://Scripts/CCC/Character/CharacterSignals.gd", "res://Scripts/Character/CharacterState.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/CCC/Control/ClickNavigationComponent.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/CCC/Control/GamepadComponent.gd", "res://Scripts/CCC/Control/InputController.gd", "res://Scripts/CCC/Control/InputPriorityManager.gd", "res://Scripts/CCC/Control/KeyboardInput.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/CCC/Control/RawInputProcessor.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/Character/CharacterState.gd"
+selected_script="res://Scripts/Controllers/AnimationManager.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
