Controll refactor checkpoint

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CCC/Camera/CameraInput.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Camera/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=6
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=586
+dock_hsplit_2=585
 dock_hsplit_3=-480
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn")
 current_scene="res://CCC.tscn"
 center_split_offset=-700
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/CCC/Camera/CameraController.gd", "res://Scripts/CCC/Camera/CameraInput.gd", "res://Scripts/CCC/Camera/CameraResponder.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/CCC/Control/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CCC/Control/GamepadComponent.gd", "res://Scripts/CCC/Control/InputController.gd", "res://Scripts/InputComponents/InputManager_backup.gd", "res://Scripts/CCC/Control/InputPriorityManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/CCC/Control/KeyboardInput.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/CCC/Control/RawInputProcessor.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/CCC/Control/ClickNavigationComponent.gd"
+selected_script="res://Scripts/CCC/Camera/CameraInput.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
