--- a/.godot/editor/script_editor_cache-M-GFX-RBMH10.cfg
+++ b/.godot/editor/script_editor_cache-M-GFX-RBMH10.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 172,
+"row": 173,
 "scroll_position": 155.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
-"scroll_position": 50.0,
+"row": 87,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,12 +73,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 108,
-"scroll_position": 73.0,
-"selection": false,
+"row": 30,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 30,
+"selection_to_column": 6,
+"selection_to_line": 62,
 "syntax_highlighter": "GDScript"
 }
 
@@ -101,25 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/ControllerCharacter.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 12,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 248,
-"scroll_position": 215.0,
+"row": 191,
+"scroll_position": 161.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -157,10 +147,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 31,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -171,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
+"row": 28,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -185,11 +175,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
+"row": 37,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -199,11 +189,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 36,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
+"row": 37,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -227,25 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/InputComponents/GamepadComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 36,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -255,11 +231,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 153,
-"scroll_position": 132.0,
+"row": 157,
+"scroll_position": 142.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -269,11 +245,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
+"row": 64,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -287,7 +263,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 154,
-"scroll_position": 118.0,
+"scroll_position": 135.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -357,21 +333,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 257,
-"scroll_position": 220.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/InputComponents/InputManager_backup.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 221,
-"scroll_position": 0.0,
+"scroll_position": 222.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -386,6 +348,76 @@ state={
 "h_scroll_position": 0,
 "row": 288,
 "scroll_position": 253.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Character/CharacterController.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Character/CharacterPhysics.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 180,
+"scroll_position": 145.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Character/CharacterActions.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 70,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 245,
+"scroll_position": 210.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/Character/CharacterSignals.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 276,
+"scroll_position": 241.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/CharacterState.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 44,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 386,
+"scroll_position": 363.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
