Revert "COntrol scripts new"
This reverts commit 22ca62d283137ce9b61669a17116346c84dec2ff.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -31,6 +31,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/CCC/Camera/CameraResponder.gd"
 }, {
+"base": &"Node3D",
+"class": &"CameraRig",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Controllers/CameraRig_legacy.gd"
+}, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
 "icon": "",
@@ -61,15 +69,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CCC/Control/ClickNavigationComponent.gd"
-}, {
-"base": &"Node",
-"class": &"GamepadComponent",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/GamepadComponent.gd"
+"path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
@@ -78,14 +78,6 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputComponents/GamepadComponent.gd"
-}, {
-"base": &"Node",
-"class": &"InputController",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/InputController.gd"
 }, {
 "base": &"Node",
 "class": &"InputManager",
@@ -104,28 +96,12 @@ list=[{
 "path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
-"class": &"KeyboardInput",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/KeyboardInput.gd"
-}, {
-"base": &"Node",
 "class": &"MovementManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/MovementManager.gd"
-}, {
-"base": &"Node",
-"class": &"RawInputProcessor",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/RawInputProcessor.gd"
 }, {
 "base": &"Node",
 "class": &"State",
