--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,3 +1,21 @@
+[res://Scripts/InputComponents/ClickNavigationComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 59,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 43,
+"scroll_position": 26.0,
+"selection": true,
+"selection_from_column": 43,
+"selection_from_line": 43,
+"selection_to_column": 59,
+"selection_to_line": 43,
+"syntax_highlighter": "GDScript"
+}
+
 [res://Scripts/_Debug/DebugUI.gd]
 
 state={
@@ -73,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 221,
-"scroll_position": 0.0,
+"row": 49,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -306,72 +324,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/CCC/Control/InputController.gd]
+[res://Scripts/Controllers/CameraRig_legacy.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 190,
-"scroll_position": 154.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Control/RawInputProcessor.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 188,
-"scroll_position": 152.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Control/KeyboardInput.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 121,
-"scroll_position": 85.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Control/GamepadComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 208,
+"row": 13,
 "scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Control/ClickNavigationComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 259,
-"scroll_position": 223.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
