--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,12 +32,28 @@ list=[{
 "path": "res://Scripts/CCC/Camera/CameraResponder.gd"
 }, {
 "base": &"Node",
+"class": &"CharacterActions",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterActions.gd"
+}, {
+"base": &"Node",
 "class": &"CharacterDebugHelper",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/_Debug/CharacterDebugHelper.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterPhysics",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CharacterPhysics.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
@@ -85,7 +101,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Components/JumpSystem.gd"
+"path": "res://Scripts/Components/JumpSystem_backup.gd"
 }, {
 "base": &"Node",
 "class": &"MovementManager",
