--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,7 +5,135 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Controllers/AnimationManager.gd"
+"path": "res://Scripts/OLD/Controllers/AnimationManager.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_AnimationManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Support/CCC_AnimationManager.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CameraController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CCC_CameraController.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CameraInput",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CCC_CameraInput.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CameraModes",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CCC_CameraModes.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CameraResponder",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Camera/CCC_CameraResponder.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CharacterActions",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CCC_CharacterActions.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"CCC_CharacterController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CCC_CharacterController.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CharacterMovement",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CCC_CharacterMovement.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CharacterPhysics",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CCC_CharacterPhysics.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_CharacterState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/CCC_CharacterState.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_ClickNavigation",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/CCC_ClickNavigation.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_DebugSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Support/CCC_DebugSystem.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_GamepadInput",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/CCC_GamepadInput.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_InputManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/CCC_InputManager.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_KeyboardInput",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/CCC_KeyboardInput.gd"
+}, {
+"base": &"Node",
+"class": &"CCC_UIManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Support/CCC_UIManager.gd"
 }, {
 "base": &"Node3D",
 "class": &"CameraController",
@@ -13,7 +141,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraController.gd"
+"path": "res://Scripts/OLD/Character/Camera/CameraController.gd"
 }, {
 "base": &"Node",
 "class": &"CameraInput",
@@ -21,7 +149,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraInput.gd"
+"path": "res://Scripts/OLD/Character/Camera/CameraInput.gd"
 }, {
 "base": &"Node",
 "class": &"CameraResponder",
@@ -29,7 +157,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraResponder.gd"
+"path": "res://Scripts/OLD/Character/Camera/CameraResponder.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -37,7 +165,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/_Debug/CharacterDebugHelper.gd"
+"path": "res://Scripts/OLD/_Debug/CharacterDebugHelper.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
@@ -45,7 +173,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/CharacterStatesBase.gd"
+"path": "res://Scripts/OLD/Character/CharacterStatesBase.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterStateMachine",
@@ -53,7 +181,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/CharacterStateMachine.gd"
+"path": "res://Scripts/OLD/Character/CharacterStateMachine.gd"
 }, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
@@ -61,7 +189,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
+"path": "res://Scripts/OLD/InputComponents/ClickNavigationComponent.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
@@ -69,7 +197,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/InputComponents/GamepadComponent.gd"
+"path": "res://Scripts/OLD/InputComponents/GamepadComponent.gd"
 }, {
 "base": &"Node",
 "class": &"InputManager",
@@ -77,7 +205,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/InputComponents/InputManager.gd"
+"path": "res://Scripts/OLD/InputComponents/InputManager.gd"
 }, {
 "base": &"Node",
 "class": &"JumpSystem",
@@ -85,7 +213,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Components/JumpSystem.gd"
+"path": "res://Scripts/OLD/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
 "class": &"MovementManager",
@@ -93,7 +221,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/MovementManager.gd"
+"path": "res://Scripts/OLD/Character/MovementManager.gd"
 }, {
 "base": &"Node",
 "class": &"State",
@@ -101,7 +229,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/State.gd"
+"path": "res://Scripts/OLD/Character/State.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateAirborne",
@@ -109,7 +237,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateAirborne.gd"
+"path": "res://Scripts/OLD/Character/States/StateAirborne.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateIdle",
@@ -117,7 +245,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateIdle.gd"
+"path": "res://Scripts/OLD/Character/States/StateIdle.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateJumping",
@@ -125,7 +253,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateJumping.gd"
+"path": "res://Scripts/OLD/Character/States/StateJumping.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateLanding",
@@ -133,7 +261,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateLanding.gd"
+"path": "res://Scripts/OLD/Character/States/StateLanding.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateRunning",
@@ -141,7 +269,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateRunning.gd"
+"path": "res://Scripts/OLD/Character/States/StateRunning.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateWalking",
@@ -149,5 +277,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/States/StateWalking.gd"
+"path": "res://Scripts/OLD/Character/States/StateWalking.gd"
 }]
